# eu4save

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
bench/: Cargo.toml
bench/src/: bench.rs  benchmarks.rs  criterion_main.rs  gungraun_main.rs
bench/src/benchmarks/: country_tag_hashing.rs  deserialize_ledger.rs  parse_save.rs
benches/: eu4save_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_extract.rs  fuzz_melt.rs
src/: country_tag.rs  deflate.rs  dlc.rs  errors.rs  eu4date.rs  extraction.rs  file.rs  file2.rs  flavor.rs  lib.rs  melt.rs  models.rs  province_id.rs  query.rs  resolver.rs  tag_resolver.rs  tokens.rs
src/de/: alternating_key_values.rs  country_events.rs  country_history.rs  deserializers.rs  deserializers2.rs  gameplay_settings.rs  leader_kind.rs  ledger_vec.rs  list_overflow_byte.rs  map_capacity.rs  map_pair.rs  mod.rs  positive_vec.rs  province_event_value.rs  province_events.rs  province_history.rs  token_bool.rs  trade_node.rs  vec_overflow_byte.rs  vec_pair.rs  war_events.rs  war_history.rs  yes_map.rs
src/models/: country_tag.rs  mod.rs  province_id.rs
tests/: crashes.rs  ironman.rs  samples.rs  utils.rs
tests/fixtures/: meta.bin.melted
tests/it/: ironman.rs  main.rs  samples.rs  utils.rs
tests/it/fixtures/: meta.bin.melted
