[package]
name = "eu4save"
version = "0.8.2"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2021"
exclude = ["/assets/*", "/fuzz/*"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rakaly/eu4save.git"
description = "Ergonomically work with all EU4 saves (ironman and multiplayer)"
keywords = ["eu4", "ironman"]
categories = ["parsing"]

[features]
default = ["miniz"]
miniz = ["miniz_oxide"]
libdeflate = ["libdeflater/freestanding"]
zstd = ["dep:zstd-safe"]
serialize = []
tsify = ["dep:tsify", "dep:wasm-bindgen"]
specta = ["dep:specta"]

[dependencies]
jomini =  { version = "0.23.0", features = ["json"] }
once_cell = "1"
zip = { version =  "0.6", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
libdeflater = { version = "0.11", optional = true }
miniz_oxide = { version = "0.6", optional = true }
zstd-safe = { version = "6", default-features = false, optional = true }
tsify = { version = "0.4.5", default-features = false, optional = true }
wasm-bindgen = { version = "0.2", default-features = false, optional = true }
specta = { version = "1.0.4", optional = true }

[dev-dependencies]
zip = { version =  "0.6", default-features = false, features = ["deflate"] }
attohttpc = "0.26"
paste = "1"
twoway = "0.2"

# We override the test profile so that our tests run in a tolerable time as
# some of the asset files are heavyweight and can take a significant amount of
# time. Here is some timing data recorded to run one test:
#
# cargo test                 0m15.037s
# cargo test (opt-level=3)   0m9.644s
# cargo test (+lto=thin)     0m0.907s
# cargo test --release       0m0.620s
[profile.test]
opt-level = 3
lto = "thin"
