[package]
publish = false
name = "eu4save-bench"
version = "0.0.1"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
description = "Criterion benchmark suite for eu4save."
homepage = "https://github.com/rakaly/eu4save/tree/master/bench"
repository = "https://github.com/rakaly/eu4save"
license = "MIT"
edition = "2021"

[workspace]

[lib]
bench = false

[[bench]]
name = "eu4-bench"
harness = false
path = "src/bench.rs"

[dependencies]
criterion = "0.6.0"
erased-serde = "0.4.5"
eu4save = { path = "../" }
jomini = "0.29.0"
rawzip = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_path_to_error = "0.1.16"

[profile.release]
debug = true

[profile.bench]
debug = true
