[package]
publish = false
name = "eu4save-bench"
version = "0.0.1"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
description = "Criterion benchmark suite for eu4save."
homepage = "https://github.com/rakaly/eu4save/tree/master/bench"
repository = "https://github.com/rakaly/eu4save"
license = "MIT"
edition = "2021"

[workspace]

[lib]
bench = false

[dependencies]
criterion = "0.8.0"
erased-serde = "0.4.5"
eu4save = { path = "../" }
gungraun = "0.19.0"
jomini = "0.35"
rawzip = "0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_path_to_error = "0.1.16"

[[bench]]
name = "jomini-bench-criterion"
harness = false
path = "src/criterion_main.rs"

[[bench]]
name = "jomini-bench-gungraun"
harness = false
path = "src/gungraun_main.rs"

[profile.release]
debug = true

[profile.bench]
debug = true
